temporary spacing fix for about me description

--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,7 @@ h2 {
   @media (max-width: 1100px) {
     grid-template-columns: auto;
     grid-template-rows: 1fr 1fr;
+    height: 150vh;
 
     #about-image-container {
       position: relative;
